--- a/view/adminhtml/templates/system/config/get_number_images.phtml
+++ b/view/adminhtml/templates/system/config/get_number_images.phtml
@@ -11,7 +11,7 @@
 
             jQuery("#axzoom_getnumberimages_2d, #axzoom_getnumberimages_360").html("&#8986;");
             var params = {};
-            new Ajax.Request('<?php echo $block->getAjaxUrl() ?>', {
+            new Ajax.Request('<?= $block->escapeHtml($block->getAjaxUrl()) ?>', {
                 parameters:     params,
                 loaderArea:     false,
                 asynchronous:   true,
@@ -70,10 +70,10 @@
     </tbody>
 </table>
 
-<?php echo $block->getButtonHtml() ?>
-<p class="note"><?php echo __('Request total number of images') ?></p>
+<?= $block->getButtonHtml() ?>
+<p class="note"><?= $block->escapeHtml(__('Request total number of images')) ?></p>
 <span class="collect-indicator" id="get_number_images_span">
-    <img class="processing" hidden="hidden" alt="Collecting" style="margin:0 5px" src="<?php echo $block->getViewFileUrl('images/process_spinner.gif') ?>"/>
-    <img class="collected" hidden="hidden" alt="Collected" style="margin:-3px 5px" src="<?php echo $block->getViewFileUrl('images/rule_component_apply.gif') ?>"/>
+    <img class="processing" hidden="hidden" alt="Collecting" style="margin:0 5px" src="<?= $block->escapeHtml($block->getViewFileUrl('images/process_spinner.gif')) ?>"/>
+    <img class="collected" hidden="hidden" alt="Collected" style="margin:-3px 5px" src="<?= $block->escapeHtml($block->getViewFileUrl('images/rule_component_apply.gif')) ?>"/>
     <span id="get_number_images_message_span"></span>
 </span>
