--- a/view/adminhtml/templates/uploader.phtml
+++ b/view/adminhtml/templates/uploader.phtml
@@ -1,50 +1,32 @@
 <?php
 $id = 'file360';
 $name = 'file360';
-//$url = Mage::helper("adminhtml")->getUrl("axzoom/index/addProductImage360", array('id_product' => $productId));
-$url = $this->getUrlAjax("addProductImage360") . '?isAjax=true&id_product=' . $productId . '&SID=' . $_COOKIE['admin'];
+$url = $block->getUrlAjax("addProductImage360") . '?isAjax=true&id_product=' . $productId . '&SID=' . $_COOKIE['admin'];
 
-$postMaxSize = return_bytes(ini_get('post_max_size'));
+$postMaxSize = $block->returnBytes(ini_get('post_max_size'));
 $maxFiles = 100;
-
-function return_bytes($val)
-{
-    $val = trim($val);
-    $last = strtolower($val[strlen($val)-1]);
-    $val = intval($val);
-
-    switch ($last) {
-        case 'g':
-            $val *= 1024;
-        case 'm':
-            $val *= 1024;
-        case 'k':
-            $val *= 1024;
-    }
-    return $val;
-}
 ?>
 
 <div class="form-group">
     <div class="col-lg-12">
-        <input id="<?php echo $id ?>" type="file" name="<?php echo $name ?>" data-url="<?php echo $url ?>" multiple="multiple" style="width:0px;height:0px;" />
-        <button class="btn btn-default" data-style="expand-right" data-size="s" type="button" id="<?php echo $id ?>-add-button">
-            <i class="icon-folder-open"></i> <?php echo __('Add files...') ?>
+        <input id="<?= $block->escapeHtml($id) ?>" type="file" name="<?= $block->escapeHtml($name) ?>" data-url="<?= $block->escapeHtml($url) ?>" multiple="multiple" style="width:0px;height:0px;" />
+        <button class="btn btn-default" data-style="expand-right" data-size="s" type="button" id="<?= $block->escapeHtml($id) ?>-add-button">
+            <i class="icon-folder-open"></i> <?= $block->escapeHtml(__('Add files...')) ?>
         </button>
     </div>
 </div>
 
 <div class="well" style="display:none">
-    <div id="<?php echo $id ?>-files-list"></div>
-    <button class="ladda-button btn btn-primary" data-style="expand-right" type="button" id="<?php echo $id ?>-upload-button" style="display:none;">
-        <span class="ladda-label"><i class="icon-check"></i> <?php echo __('Upload files') ?></span>
+    <div id="<?= $block->escapeHtml($id) ?>-files-list"></div>
+    <button class="ladda-button btn btn-primary" data-style="expand-right" type="button" id="<?= $block->escapeHtml($id) ?>-upload-button" style="display:none;">
+        <span class="ladda-label"><i class="icon-check"></i> <?= $block->escapeHtml(__('Upload files')) ?></span>
     </button>
 </div>
 <div class="row" style="display:none">
-    <div class="alert alert-success" id="<?php echo $id ?>-success"></div>
+    <div class="alert alert-success" id="<?= $block->escapeHtml($id) ?>-success"></div>
 </div>
 <div class="row" style="display:none">
-    <div class="alert alert-danger" id="<?php echo $id ?>-errors"></div>
+    <div class="alert alert-danger" id="<?= $block->escapeHtml($id) ?>-errors"></div>
 </div>
 
 <script type="text/javascript">
@@ -73,43 +55,43 @@ function return_bytes($val)
         "jquery/file-uploader"
         ], function($){
         <?php if (isset($files) && $files) : ?>
-            $('#<?php echo $id ?>-images-thumbnails').parent().show();
+            $('#<?= $block->escapeHtml($id) ?>-images-thumbnails').parent().show();
         <?php endif; ?>
 
-        var <?php echo $id ?>_total_files = 0;
+        var <?= $block->escapeHtml($id) ?>_total_files = 0;
 
 
-        $('#<?php echo $id ?>').fileupload({
+        $('#<?= $block->escapeHtml($id) ?>').fileupload({
             dataType: 'json',
             async: false,
             autoUpload: false,
             singleFileUploads: true,
-            maxFileSize: <?php echo $postMaxSize ?>,
+            maxFileSize: <?= $block->escapeHtml($postMaxSize) ?>,
             start: function (e) {
-                $('#<?php echo $id ?>-upload-button').unbind('click'); //Important as we bind it for every elements in add function
+                $('#<?= $block->escapeHtml($id) ?>-upload-button').unbind('click'); //Important as we bind it for every elements in add function
             },
             fail: function (e, data) {
-                $('#<?php echo $id ?>-errors').html(data.errorThrown.message).parent().show();
-                $('#<?php echo $id ?>-files-list').html('').parent().hide();
+                $('#<?= $block->escapeHtml($id) ?>-errors').html(data.errorThrown.message).parent().show();
+                $('#<?= $block->escapeHtml($id) ?>-files-list').html('').parent().hide();
             },
             done: function (e, data) {
                 if (data.result) {
-                    if (typeof data.result.<?php echo $name ?> !== 'undefined') {
-                        for (var i=0; i<data.result.<?php echo $name ?>.length; i++) {
-                            if (typeof data.result.<?php echo $name ?>[i].error !== 'undefined' && data.result.<?php echo $name ?>[i].error != '') {
-                                $('#<?php echo $id ?>-errors').html('<strong>'+data.result.<?php echo $name ?>[i].name+'</strong> : '+data.result.<?php echo $name ?>[i].error).parent().show();
-                                $('#<?php echo $id ?>-files-list').html('').parent().hide();
+                    if (typeof data.result.<?= $block->escapeHtml($name) ?> !== 'undefined') {
+                        for (var i=0; i<data.result.<?= $block->escapeHtml($name) ?>.length; i++) {
+                            if (typeof data.result.<?= $block->escapeHtml($name) ?>[i].error !== 'undefined' && data.result.<?= $block->escapeHtml($name) ?>[i].error != '') {
+                                $('#<?= $block->escapeHtml($id) ?>-errors').html('<strong>'+data.result.<?= $block->escapeHtml($name) ?>[i].name+'</strong> : '+data.result.<?= $block->escapeHtml($name) ?>[i].error).parent().show();
+                                $('#<?= $block->escapeHtml($id) ?>-files-list').html('').parent().hide();
                             }
                             else
                             {
-                                $(data.context).appendTo($('#<?php echo $id ?>-success'));
-                                $('#<?php echo $id ?>-success').parent().show();
+                                $(data.context).appendTo($('#<?= $block->escapeHtml($id) ?>-success'));
+                                $('#<?= $block->escapeHtml($id) ?>-success').parent().show();
 
 
-                                if (data.result.<?php echo $name ?>[i] !== null && data.result.<?php echo $name ?>[i].status == 'ok')
+                                if (data.result.<?= $block->escapeHtml($name) ?>[i] !== null && data.result.<?= $block->escapeHtml($name) ?>[i].status == 'ok')
                                 {
 
-                                    var response = data.result.<?php echo $name ?>[i];
+                                    var response = data.result.<?= $block->escapeHtml($name) ?>[i];
                                     var cover = "icon-check-empty";
                                     var legend = '';
 
@@ -126,67 +108,67 @@ function return_bytes($val)
                 }
             },
         }).on('fileuploadalways', function (e, data) {
-                <?php echo $id ?>_total_files--;
+                <?= $block->escapeHtml($id) ?>_total_files--;
 
-                if (<?php echo $id ?>_total_files == 0)
+                if (<?= $block->escapeHtml($id) ?>_total_files == 0)
                 {
-                    $('#<?php echo $id ?>-upload-button').unbind('click');
-                    $('#<?php echo $id ?>-files-list').parent().hide();
+                    $('#<?= $block->escapeHtml($id) ?>-upload-button').unbind('click');
+                    $('#<?= $block->escapeHtml($id) ?>-files-list').parent().hide();
                 }
         }).on('fileuploadadd', function(e, data) {
-            if (typeof <?php echo $id ?>_max_files !== 'undefined') {
-                if (<?php echo $id ?>_total_files >= <?php echo $id ?>_max_files) {
+            if (typeof <?= $block->escapeHtml($id) ?>_max_files !== 'undefined') {
+                if (<?= $block->escapeHtml($id) ?>_total_files >= <?= $block->escapeHtml($id) ?>_max_files) {
                     e.preventDefault();
-                    alert('You can upload a maximum of <?php echo $maxFiles ?> files');
+                    alert('You can upload a maximum of <?= $block->escapeHtml($maxFiles) ?> files');
                     return;
                 }
             }
 
-            data.context = $('<div/>').addClass('form-group').appendTo($('#<?php echo $id ?>-files-list'));
+            data.context = $('<div/>').addClass('form-group').appendTo($('#<?= $block->escapeHtml($id) ?>-files-list'));
             var file_name = $('<span/>').append('<i class="icon-picture-o"></i> <strong>'+data.files[0].name+'</strong> ('+humanizeSize(data.files[0].size)+')').appendTo(data.context);
 
             var button = $('<button/>').addClass('btn btn-default pull-right').prop('type', 'button').html('<i class="icon-trash"></i> Remove file').appendTo(data.context).on('click', function() {
-                <?php echo $id ?>_total_files--;
+                <?= $block->escapeHtml($id) ?>_total_files--;
                 data.files = null;
 
                 var total_elements = $(this).parent().siblings('div.form-group').length;
                 $(this).parent().remove();
 
                 if (total_elements == 0) {
-                    $('#<?php echo $id ?>-files-list').html('').parent().hide();
+                    $('#<?= $block->escapeHtml($id) ?>-files-list').html('').parent().hide();
                 }
             });
 
-            $('#<?php echo $id ?>-files-list').parent().show();
-            $('#<?php echo $id ?>-upload-button').show().bind('click', function () {
+            $('#<?= $block->escapeHtml($id) ?>-files-list').parent().show();
+            $('#<?= $block->escapeHtml($id) ?>-upload-button').show().bind('click', function () {
                 if (data.files != null)
                     data.submit();
             });
 
-            <?php echo $id ?>_total_files++;
+            <?= $block->escapeHtml($id) ?>_total_files++;
         }).on('fileuploadprocessalways', function (e, data) {
             var index = data.index,    file = data.files[index];
 
             if (file.error) {
-                $('#<?php echo $id ?>-errors').append('<div class="form-group"><i class="icon-picture-o"></i> <strong>'+file.name+'</strong> ('+humanizeSize(file.size)+') : '+file.error+'</div>').parent().show();
-                $('#<?php echo $id ?>-files-list').html('').parent().hide();
+                $('#<?= $block->escapeHtml($id) ?>-errors').append('<div class="form-group"><i class="icon-picture-o"></i> <strong>'+file.name+'</strong> ('+humanizeSize(file.size)+') : '+file.error+'</div>').parent().show();
+                $('#<?= $block->escapeHtml($id) ?>-files-list').html('').parent().hide();
                 $(data.context).find('button').trigger('click');
             }
         }).on('fileuploadsubmit', function (e, data) {
             var params = new Object();
 
             params['id_360set'] = $('#id_360set').val();
-            params['form_key'] = '<?php echo $this->getFormKey() ?>';
+            params['form_key'] = '<?= $block->escapeHtml($block->getFormKey()) ?>';
 
             data.formData = params;
         }).on('fileuploadstop', function (e, data) {
             
         });
 
-        $('#<?php echo $id ?>-add-button').on('click', function() {
-            $('#<?php echo $id ?>-success').html('').parent().hide();
-            $('#<?php echo $id ?>-errors').html('').parent().hide();
-            $('#<?php echo $id ?>').trigger('click');
+        $('#<?= $block->escapeHtml($id) ?>-add-button').on('click', function() {
+            $('#<?= $block->escapeHtml($id) ?>-success').html('').parent().hide();
+            $('#<?= $block->escapeHtml($id) ?>-errors').html('').parent().hide();
+            $('#<?= $block->escapeHtml($id) ?>').trigger('click');
         });        
     });
 </script>
